--- a/visualization/sidebar.html
+++ b/visualization/sidebar.html
@@ -4,20 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASL-LEX Visualization</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/style_bootstrap.css">
-    <!-- Scrollbar Custom CSS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-    <!-- Font Awesome JS -->
-
-    <link rel="stylesheet" type="text/css" href="css/viz-style-sidebar.css">
 </head>
 
 <!-- filesaver -->
@@ -62,82 +53,25 @@
                    aria-label="Search"/>
 
             <li>
-                <!--<button id='bbox-button' class="download" onclick="reset()">Reset Graph</button>-->
-                <a href="#"  onclick="reset()" class="download">Reset Graph</a>
+                <a href="#" onclick="reset()" class="download">Reset Graph</a>
             </li>
 
 
         </ul>
 
-        <ul id="signDataList" class="list-unstyled components">
+        <ul class="list-unstyled CTAs">
             <li class="active">
-                <a class="dropdown-toggle collapsed" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sign Data</a>
+                <a id="signDataList" class="dropdown-toggle collapsed" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sign
+                    Data</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li><br/>
-                        <div id="data-container">Click on a node to see it's data</div>
-                        <!--<a href="#">Home 1</a>-->
+                        <div id="data-container"></div>
                     </li>
-                    <!--<li>-->
-                    <!--<a href="#">Home 2</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a href="#">Home 3</a>-->
-                    <!--</li>-->
                 </ul>
             </li>
-            <!--<li>-->
-            <!--<a href="#">About</a>-->
-            <!--<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>-->
-            <!--<ul class="collapse list-unstyled" id="pageSubmenu">-->
-            <!--<li>-->
-            <!--<a href="#">Page 1</a>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<a href="#">Page 2</a>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<a href="#">Page 3</a>-->
-            <!--</li>-->
-            <!--</ul>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<a href="#">Portfolio</a>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<a href="#">Contact</a>-->
-            <!--</li>-->
+        </ul>
         </ul>
 
-        <!--<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>-->
-        <!--<ul class="collapse list-unstyled" id="pageSubmenu">-->
-        <!--<li>-->
-        <!--<a href="#">Page 1</a>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--<a href="#">Page 2</a>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--<a href="#">Page 3</a>-->
-        <!--</li>-->
-        <!--</ul>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--<a href="#">Portfolio</a>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--<a href="#">Contact</a>-->
-        <!--</li>-->
-        </ul>
-
-        <!--<ul class="list-unstyled CTAs">-->
-        <!--<li>-->
-        <!--<button id='bbox-button' class="btn btn-primary" onclick="reset()">Reset Graph</button>-->
-        <!--&lt;!&ndash;<a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>&ndash;&gt;-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--<a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>-->
-        <!--</li>-->
-        <!--</ul>-->
     </nav>
 
     <!-- Page Content  -->
@@ -150,7 +84,9 @@
                     <i class="fa fa-align-left"></i>
                     <span>Show Menu</span>
                 </button>
-                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-align-justify"></i>
                 </button>
 
@@ -175,9 +111,18 @@
 </div>
 <div class="sidebar-overlay"></div>
 
-<!--Works-->
-
 <!-- JS imports -->
+<link rel="stylesheet" href="css/style_bootstrap.css">
+<!-- Scrollbar Custom CSS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+<!-- Font Awesome JS -->
+
+<link rel="stylesheet" type="text/css" href="css/viz-style-sidebar.css">
+
 <script src="//d3js.org/d3.v5.min.js"></script>
 <script src="js/f-d3-sidebar.js"></script>
 <script
@@ -188,8 +133,6 @@
 <script src="js/awesomplete.js" async></script>
 <script src="js/user-interface.js"></script>
 <link rel="stylesheet" href="css/awesomplete.css"/>
-<!--<script  src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>-->
-<!--<script  src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>-->
 
 </body>
 
