Make zoom not zoom in so much, made sidebar default

--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -14,7 +14,7 @@
 
 <svg id='plt'></svg>
 <div id="goto">
-  <a href="index.html">See in Graph</a>
+  <a href="index-no-sidebar.html">See in Graph</a>
 </div>
 
 <!-- side container -->
