--- a/visualization/index.html
+++ b/visualization/index.html
@@ -4,96 +4,127 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASL-LEX Visualization</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/viz-style.css">
 </head>
 
 <!-- filesaver -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#sidebar").mCustomScrollbar({
+            theme: "minimal"
+        });
+
+        $('#dismiss, .sidebar-overlay').on('click', function () {
+            $('#sidebar').removeClass('active');
+            $('.sidebar-overlay').removeClass('active');
+        });
+
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').addClass('active');
+            $('.sidebar-overlay').addClass('active');
+            $('.collapse.in').toggleClass('in');
+            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
+        });
+    });
+</script>
+
 <body>
 <!-- middle visual container -->
-<svg id='viz'></svg>
-<div id="goto">
-    <a href="scatterplot.html">See Pair Plots</a>
-</div>
-<div class='side-container'>
-    <!-- tabs for side content -->
-    <ul class='nav nav-tabs'>
-        <li id='about-tab' class='nav-item'>
-            <a href="#search" class="nav-link active" data-toggle='tab'>About</a>
-        </li>
+<div class="wrapper">
+    <!-- Sidebar  -->
+    <nav id="sidebar">
+        <div id="dismiss">
+            <i class="fa fa-arrow-left"></i>
+        </div>
 
-        <!--<li class="nav-item">-->
-        <!--<a href="#filter" class="nav-link" data-toggle="tab">Filter</a>-->
-        <!--</li>-->
+        <div class="sidebar-header">
+            <h3>ASL-LEX 2.0</h3>
+        </div>
 
-        <li class="nav-item" id='data-tab'>
-            <a href="#data-container" class="nav-link" data-toggle="tab">Sign Data</a>
-        </li>
-    </ul>
+        <ul class="list-unstyled CTAs">
+            <li>Search For A Word</li>
+            <input id="search-box" class="list-unstyled CTAs form-control" type="text" placeholder="Type a word here"
+                   aria-label="Search"/>
 
-    <!-- contents under each tab -->
-    <div class='tab-content'>
-        <div class="tab-pane fade show active" id="search">
-            <!-- contents that are within each tab -->
-            <div>
-                <h6 class="mt-2 float-left">ASL-LEX</h6><br><br>
+            <li>
+                <a href="#" onclick="reset()" class="download">Reset Graph</a>
+            </li>
 
-                <ul>
-                    <li> This is a network graph visualization for 2768 signs in the ASL-LEX 2.0 database.</li>
-                    <li>Signs that share all but one of SelectedFingers, Flexion properties, Spread Properties,
-                        SpreadChange, ThumbPosition, ThumbContact, SignType, Movement, MajorLocation, MinorLocation,
-                        Contact,
-                        NonDominantHandshape and UlnarRotation are connected by lines (edges).
+
+        </ul>
+
+        <ul class="list-unstyled CTAs">
+            <li class="active">
+                <a id="signDataList" class="dropdown-toggle collapsed" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sign
+                    Data</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><br/>
+                        <div id="data-container"></div>
                     </li>
-                    <li>Please allow few seconds for the graph to load the first time.</li>
                 </ul>
-                <hr>
-                <h6 class="mt-2 float-left">Exploring the Lexicon</h6><br><br>
-                <div>
-                    <ul>
-                        <li> Click on a node to zoom into that section of the graph</li>
-                        <li> Select a subset of nodes by dragging your mouse cursor over them when the + sign appears.
-                            Then choose "See Pair Plots". This will render an alternate
-                            visualization where you can see pairwise scatter plots of the selected signs.
+            </li>
+        </ul>
+        </ul>
+
+    </nav>
+
+    <!-- Page Content  -->
+    <div id="content">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fa fa-align-left"></i>
+                    <span>Show Menu</span>
+                </button>
+                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-align-justify"></i>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">View Network graph</a>
                         </li>
-                        <li>To reset the graph to it's original state, click the Reset graph button below.</li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="popupGo()">View Scatterplot Matrix</a>
+                        </li>
                     </ul>
                 </div>
-                <h6 class="mt-2 float-left">Search For A Word</h6><br>
-
-                <!-- Search form -->
-                <div class="active-cyan-4 mb-4">
-                    <!--<input class="form-control" id="search-input" type="text" placeholder="Search for a sign" aria-label="Search">-->
-                    <input id="search-box" class="form-control" type="text" placeholder="Search for a sign"
-                           aria-label="Search"/>
-
-                </div>
-
-                <button id='bbox-button' class="btn btn-primary" onclick="reset()">Reset Graph</button>
-
             </div>
-        </div>
-        <!-- Under the filter tab -->
-
-        <div class="tab-pane fade" id="data-container"><br>
-            <p>Click on a node to see data on it.</p>
-            <p id="about-data" style='display: none;'></p>
+        </nav>
+        <svg id='viz'></svg>
+        <div id="goto">
+            <a href="scatterplot.html">See Pair Plots</a>
         </div>
 
     </div>
 </div>
-<!-- side container -->
+<div class="sidebar-overlay"></div>
 
 <!-- JS imports -->
+<link rel="stylesheet" href="css/style_bootstrap.css">
+<!-- Scrollbar Custom CSS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+<!-- Font Awesome JS -->
+
+<link rel="stylesheet" type="text/css" href="css/viz-style-sidebar.css">
+
 <script src="//d3js.org/d3.v5.min.js"></script>
-<script src="js/f-d3.js"></script>
+<script src="js/d3-sidebar.js"></script>
 <script
         src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js"
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
@@ -102,6 +133,7 @@
 <script src="js/awesomplete.js" async></script>
 <script src="js/user-interface.js"></script>
 <link rel="stylesheet" href="css/awesomplete.css"/>
+
 </body>
 
 </html>
