Implement general purpose filtering functionality and Update graph rendering and color of graph edges

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -84,7 +84,7 @@
                         <div class="card">                        
                             <a class="dropdown-toggle collapsed" href="#frequency" data-toggle="collapse" aria-expanded="false">Frequency Properties
                             </a>                  
-                            <div id="frequency" class="collapse show" aria-labelledby="frequency_h" data-parent="#filter">
+                            <div id="frequency" class="collapse" aria-labelledby="frequency_h" data-parent="#filter">
                                 <div class="card-body">                                                          
                                     <div class="accordion" id="sign_frequency">
                                         <!-- Sign Frequency(M) --> 
@@ -160,7 +160,13 @@
                                                         <input type="checkbox" class="form-check-input" id="asymmetricaldiffhandshape">
                                                         <label class="form-check-label" for="asymmetricaldiffhandshape"><strong>AsymmetricalDifferentHandShape</strong></label>                                        
                                                     </div></div>
-                                                  
+                                                    <div class="row">
+                                                        <div class="col"></div>
+                                                        <div class="col">
+                                                            <button class="btn btn-link" onclick="submit('sing_type')" type="button">Submit</button>
+                                                        </div>
+                                                        <div class="col"></div>
+                                                    </div>
                                                 </div>
                                             </div>
 
