Add functionality to show active filters using badges

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -88,7 +88,8 @@
                         <div class="row">
                 <div class="col-md-12">
                     <div class="accordion list-unstyled" id="filter">
-
+                        <div id="active_filters"></div>
+                        <br>                        
                         <script id="filters_options" type="text/x-handlebars-template">
                             {{#each filters_data}}
                                 <div class="card">
