--- a/visualization/index.html
+++ b/visualization/index.html
@@ -39,6 +39,7 @@
             $('.collapse.in').toggleClass('in');
             $('a[aria-expanded=true]').attr('aria-expanded', 'false');
         });
+
     });
 </script>
 
@@ -88,12 +89,13 @@
                         <div class="row">
                 <div class="col-md-12">
                     <div class="accordion list-unstyled" id="filter">
+                        <div id="active_nodes"></div>
                         <div id="active_filters"></div>
                         <br>                        
                         <script id="filters_options" type="text/x-handlebars-template">
                             {{#each filters_data}}
                                 <div class="card">
-                                    <a class="dropdown-toggle collapsed" href="#{{@key}}" data-toggle="collapse" aria-expanded="false">{{@key}}
+                                    <a class="dropdown-toggle collapsed" href="#{{@key}}" data-toggle="collapse" aria-expanded="false">{{filterLabel @key}}
                                     </a>
                                     <div id="{{@key}}" class="collapse card-body" data-parent="#filter">
                                         {{#each this}}
@@ -128,7 +130,7 @@
                                                             <div class="row">
                                                                 <div class="col-md-2"></div>
                                                                 <div class="col-md-8 label {{range.min_id}}" >
-                                                                    <strong>Current Min Value: N/A</strong>
+                                                                    <strong>Current Min Value: {{sliderDefault range.min_value range.max_value}}</strong>
                                                                 </div>
                                                                 <div class="col-md-2"></div>
                                                             </div>
@@ -146,7 +148,7 @@
                                                             <div class="row">
                                                                 <div class="col-md-2"></div>
                                                                 <div class="col-md-8 label {{range.max_id}}">
-                                                                    <strong>Current Max Value: N/A</strong> 
+                                                                    <strong>Current Max Value: {{sliderDefault range.min_value range.max_value}}</strong> 
                                                                 </div>
                                                                 <div class="col-md-2"></div>
                                                             </div>
