implement filtering functionality for selected fingers and make opacity of graph edges change on mouse enter and mouse exit

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -14,7 +14,8 @@
     <!-- handlebars -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <!-- filesaver -->
@@ -269,6 +270,8 @@
 <script src="js/awesomplete.js" async></script>
 <script src="js/user-interface.js"></script>
 <link rel="stylesheet" href="css/awesomplete.css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+
 
 </body>
 
